# ProjectMist

./: .gitignore  README.md
Builds/Linux/: Client  Server
CppMist/: CppMist.cpp  CppMist.vcxproj
CppMist/Source/Headers/: EntityManager.h
DeterministicPhysics/: icon.svg.import  project.godot
DeterministicPhysics/Scenes/: box.tscn  box2.tscn  level.tscn
DeterministicPhysics/Scripts/: Test.gd
ECS/: CMakeLists.txt  RenderCode.txt  vcpkg.json
ECS/Includes/: glm.h
FixedLib/: library.h
Other/Comparisons/: GodotDependendiesPhysics2  MathComparison.xlsx  ReferenceComparisons.txt  SpeecComparisonFixedFloat.txt
Other/Ideas/: CollisionTypes  ECSPhysics.txt  Networking  Report structure  RollbackQuestions  feedback.txt
Other/Profiler/: ECS_2024-09-26-202534_Partition1.collapsed  ECS_2024-09-27-153548_Partition2.collapsed  ECS_2024-10-02-144301_Lifetime.collapsed  Perf2024_9_26
Other/UML/: ECS.drawio
Tests/Particles/: CMakeLists.txt  main.cpp
VisualStudio/: CppMist.sln  CppMist.vcxproj.filters
VisualStudio/Source/Headers/: ComponentArray.h  ComponentManager.h  Settings.h  SystemManager.h
